# SDL3_Engine_Template

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/: pack_assets.sh
assets/output/atlases/: main_atlas.json
assets/output/shaders/DXIL/: Default.vert.dxil
assets/output/shaders/MSL/: Default.frag.msl  Default.vert.msl
assets/output/shaders/SPIRV/: Default.frag.spv  TextureToScreen.vert.spv
assets/shaders/: compile.sh
assets/shaders/compiled/DXIL/: Default.frag.dxil  TextureToScreen.vert.dxil
assets/shaders/compiled/MSL/: TextureToScreen.vert.msl
assets/shaders/compiled/SPIRV/: Default.vert.spv
assets/shaders/sources/: CustomMaterial.frag.hlsl  Default.frag.hlsl  Default.vert.hlsl  TextureToScreen.frag.hlsl  TextureToScreen.vert.hlsl
assets/sprites/: pack_atlases.sh
assets/sprites/main_atlas/: main_atlas.aseprite
include/App/Core/: components.h
include/App/Core/Parsers/: inhouse_spritesheet_parser.h
include/App/Scenes/: initial_scene.h  scene_2d.h
include/Engine/: app.h  engine.h  logger.h
include/Engine/Core/: app.h  app_context.h  app_event.h  color.h  components.h  datatypes.h  defines.h  gamepad_codes.h  input.h  input_types.h  key_codes.h  layer_interface.h  logger.h  mouse_codes.h  scene_interface.h  texture_region.h  texture_region_parser.h  texture_sampler_type.h
include/Engine/Layers/: graphics_pipeline_manager.h  imgui_manager.h  input_manager.h  material_manager.h  scene_manager.h  texture_manager.h  texture_region_manager.h  texture_sampler_manager.h
include/Engine/Rendering/: graphics_pipeline_creation_info.h  logical_presentation.h  render_pass.h  render_target_render_pass.h  sprite_submission.h  storage_buffer.h  texture.h
include/Engine/Rendering/2D/: camera_2d.h  default_2d_render_pass.h  gpu_sprite.h  renderer_2d.h  scene_models_2d.h  shape_2d_batch.h
include/Engine/Rendering/RenderPasses/: imgui_render_pass.h  render_target_render_pass.h
src/: main.cpp
src/App/Core/Parsers/: inhouse_spritesheet_parser.cpp
src/App/Scenes/: initial_scene.cpp  scene_2d.cpp
src/Engine/: app.cpp  logger.cpp
src/Engine/Core/: app.cpp  color.cpp  datatypes.cpp  input.cpp  logger.cpp
src/Engine/Layers/: graphics_pipeline_manager.cpp  imgui_manager.cpp  input_manager.cpp  material_manager.cpp  scene_manager.cpp  texture_manager.cpp  texture_region_manager.cpp  texture_sampler_manager.cpp
src/Engine/Rendering/: render_pass.cpp  render_target_render_pass.cpp  storage_buffer.cpp
src/Engine/Rendering/2D/: camera_2d.cpp  default_2d_render_pass.cpp  renderer_2d.cpp  shape_2d_batch.cpp
src/Engine/Rendering/RenderPasses/: imgui_render_pass.cpp  render_target_render_pass.cpp
